# pipes-filesystem

./: README.md  pipes-filesystem.cabal  stack.yaml
source/Pipes/: Combinators.hs  FileSystem.hs
