name:           pipes-filesystem
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Jonathan Knowles
copyright:      Jonathan Knowles
maintainer:     mail@jonathanknowles.net
build-type:     Simple
cabal-version:  >=1.10
-- synopsis:
-- description:
-- category:

library
    default-language:   Haskell2010
    exposed-modules:
        Pipes.FileSystem
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.8 && <4.9,
        bytestring,
        directory,
        filepath,
        pipes,
        pipes-safe,
        unix
    hs-source-dirs:
        source
