name:           pipes-filesystem
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Jonathan Knowles
copyright:      Jonathan Knowles
maintainer:     mail@jonathanknowles.net
build-type:     Simple
cabal-version:  >=1.10
synopsis:       Provides functions for efficiently streaming over directory trees. (Compatible with Haskell Pipes).

library
    default-language:
        Haskell2010
    exposed-modules:
        Pipes.Combinators
        Pipes.FileSystem
    build-depends:
        base       >= 4.8      && < 5.0,
        bytestring >= 0.10.6.0 && < 1.0,
        pipes      >= 4.1.9    && < 5.0,
        pipes-safe >= 2.2.4    && < 3.0,
        unix       == 2.7.2.0
    hs-source-dirs:
        source
    ghc-options:
        -O3
        -threaded
        -funbox-strict-fields
        -rtsopts
        -fprof-auto
        -with-rtsopts=-N

